# dot-files

./: .gitignore  Cargo.toml  LICENSE  README.md
dots/: .bash_aliases  .bash_profile  .envrc  .envrc.cargo  .envrc.compiler  .envrc.docker  .envrc.editor  .envrc.mac  .envrc.python  .envrc.shells  .envrc.starship  .envrc.tmux  .envrc.wasmtime  .envrc.zsh  .gitmessage  .inputrc  .profile  .pypirc  .vimrc  .zprofile  .zshenv  .zshrc
src/: config.rs  lib.rs  true_path.rs
