[package]
name = "mdm"
version = "0.1.0"
edition = "2021"
description = "My dotfiles manager"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "env"] }
glob = "0.3.1"
home = "0.5.9"
path-absolutize = "3.1.1"
serde = { version = "1.0.197", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["fs", "macros", "io-util", "net", "process", "rt-multi-thread"] }
toml = "0.8.12"
